fix: prevent list of links from being covered by launch button

--- a/components/css/buckyless/widget.less
+++ b/components/css/buckyless/widget.less
@@ -231,7 +231,8 @@
 
         circle-button {
           width: 120px;
-          height: 96px;
+          height: 90px;
+          max-height: 90px;
           text-align: center;
         }
       }
